--- a/app/globus_portal_framework/templates/base.html
+++ b/app/globus_portal_framework/templates/base.html
@@ -48,12 +48,12 @@
 <header class="masthead2">
     <div class="container h-75">
       <div class="row h-75">
-        <div class="col-lg-9 my-auto">
+       <!--  <div class="col-lg-9 my-auto">
           <div class="header-content mx-auto">
             <p class="text-left">&nbsp;</p>
             <h3 class="mb-5 text-left">Data Discovery Portal</h3>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-5 my-auto">
           <div class="device-container">
             <div class="">
