--- a/app/globus_portal_framework/static/css/search.css
+++ b/app/globus_portal_framework/static/css/search.css
@@ -1,7 +1,7 @@
 
 /* General */
 html, body {
-  font-family: museosans,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  /*font-family: museosans,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
   font-weight: 300;
   font-size: 12px;
   color: #333;
@@ -47,7 +47,7 @@ div.info {
 }
 
 div.h-center {
-  font-family: museosans,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 16px;
   /*text-align: center;*/
   color: #555;
@@ -57,7 +57,7 @@ div.h-center {
 }
 
 #samples {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   border-collapse: collapse;
   width: 100%;
 }
@@ -273,6 +273,7 @@ div.card {
     border-radius: 4px;
   }
 }
+
 /* sidebar */
 #sidebar .card .card-header h3.card-title{
   font-weight: 300;
